<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/show_score"
        android:layout_width="match_parent"
        android:layout_height="283dp"
        android:gravity="center"
        android:textSize="32sp"
        android:text="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/score"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/score_button" />

        <Button
            android:id="@+id/steal"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/steal_button" />

        <Button
            android:id="@+id/reset"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_button" />

    </LinearLayout>

</LinearLayout>